[package]
name = "llkv-scan"
description = "Shared scan interfaces and streaming helpers for the LLKV toolkit."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[features]
default = []

[dependencies]
arrow.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
croaring.workspace = true
llkv-column-map.workspace = true
llkv-compute.workspace = true
llkv-expr.workspace = true
llkv-result.workspace = true
llkv-storage.workspace = true
llkv-types.workspace = true
rustc-hash.workspace = true
simd-r-drive-entry-handle.workspace = true

[lints]
workspace = true
