[package]
name = "llkv-slt-tester"
description = "SLT (sqllogictest) testing for the LLKV toolkit"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
keywords = ["database", "testing", "sql", "sqllogictest"]
categories = ["database-implementations", "development-tools::testing"]
readme = "README.md"

[package.metadata.cargo-udeps.ignore]
# List dependency names to ignore for this package
normal = []
development = ["llkv-test-utils"]
build = []

[features]
default = []
perf-mon = ["llkv-perf-monitor/perf-mon", "llkv-sql/perf-mon", "llkv-runtime/perf-mon"]

[dependencies]
arrow = { workspace = true, default-features = false }
async-trait.workspace = true
libtest-mimic.workspace = true
llkv-perf-monitor.workspace = true
llkv-result.workspace = true
llkv-runtime.workspace = true
llkv-sql.workspace = true
llkv-storage.workspace = true
llkv-types.workspace = true
regex.workspace = true
reqwest = { workspace = true, default-features = false, features = ["blocking", "rustls-tls"] }
sqllogictest.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing.workspace = true
walkdir.workspace = true

[dev-dependencies]
criterion.workspace = true
indoc.workspace = true
llkv-test-utils = { workspace = true, features = ["auto-init"], optional = false }

[[test]]
name = "slt_harness"
path = "tests/slt_harness.rs"
harness = false

[[bench]]
name = "test_perf_regression_bench"
harness = false

[lints]
workspace = true
