[package]
name = "llkv-sql"
description = "SQL interface for the LLKV toolkit."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
keywords = ["database", "sql", "arrow", "parser", "query"]
categories = ["database-implementations", "parser-implementations"]
readme = "README.md"

[dependencies]
arrow = { workspace = true, default-features = false }
llkv-column-map.workspace = true
llkv-compute.workspace = true
llkv-executor.workspace = true
llkv-expr.workspace = true
llkv-result.workspace = true
llkv-runtime.workspace = true
llkv-storage.workspace = true
llkv-table.workspace = true
llkv-transaction.workspace = true
regex.workspace = true
simd-r-drive-entry-handle.workspace = true
sqlparser.workspace = true
tracing = { workspace = true }
llkv-plan.workspace = true
rustc-hash.workspace = true

[dev-dependencies]
llkv-storage = { workspace = true, features = ["simd-r-drive-support"] }
tempfile.workspace = true

[lints]
workspace = true
