[package]
name = "llkv-storage"
description = "General-purpose storage adapters for the LLKV toolkit."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
keywords = ["storage", "database", "key-value", "simd", "pager"]
categories = ["database-implementations", "data-structures"]
readme = "README.md"

[dependencies]
arrow.workspace = true
llkv-result.workspace = true
num_enum = { workspace = true }
rustc-hash.workspace = true
simd-r-drive = { workspace = true, optional = true }
simd-r-drive-entry-handle = { workspace = true, features = ["arrow"] }

[features]
debug = []
simd-r-drive-support = ["simd-r-drive"]

[dev-dependencies]
llkv-storage = { path = ".", features = ["debug", "simd-r-drive-support"] }
llkv-test-utils = { workspace = true, features = ["auto-init"], optional = false }
tempfile.workspace = true

[lints]
workspace = true
