[package]
name = "llkv-storage"
description = "General-purpose storage adapters for the LLKV toolkit."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
keywords = ["storage", "database", "key-value", "simd", "pager"]
categories = ["database-implementations", "data-structures"]
readme = "README.md"

[package.metadata.cargo-udeps.ignore]
# List dependency names to ignore for this package
normal = []
development = ["llkv-test-utils"]
build = []

[features]
debug = []
simd-r-drive-support = ["simd-r-drive"]

[dependencies]
arrow.workspace = true
llkv-result.workspace = true
rustc-hash.workspace = true
simd-r-drive = { workspace = true, optional = true }
simd-r-drive-entry-handle = { workspace = true, features = ["arrow"] }

[dev-dependencies]
llkv-storage = { path = ".", features = ["debug", "simd-r-drive-support"] }
llkv-test-utils = { workspace = true, features = ["auto-init"], optional = false }
tempfile.workspace = true

[lints]
workspace = true
