[package]
name = "llkv-table"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
autobenches = false

[dependencies]
async-trait = { workspace = true }
arrow = { workspace = true }
bitcode = { workspace = true }
datafusion.workspace = true
datafusion-catalog.workspace = true
datafusion-datasource.workspace = true
llkv-column-map = { workspace = true }
llkv-result = { workspace = true }
llkv-storage = { workspace = true }
simd-r-drive-entry-handle = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
criterion = { workspace = true }

[[bench]]
name = "insert_bench"
harness = false

[lints]
workspace = true
