[package]
name = "llkv-test-utils"
description = "Test utilities for LLKV toolkit."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[features]
# When enabled, tracing will be auto-initialized at test-binary startup via ctor.
auto-init = ["ctor"]

# Note: Since this crate is just used for testing, all of these dependencies are technically
# development dependencies, but can't be specified as such due to it being its own library.
[dependencies]
libtest-mimic.workspace = true
llkv-result.workspace = true
sqllogictest.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dependencies.ctor]
optional = true
version = "0.5.0"
