[package]
name = "llkv-tpc-h"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
arrow.workspace = true
llkv.workspace = true
llkv-sql.workspace = true
regex.workspace = true
thiserror.workspace = true
sqlparser.workspace = true
