[package]
name = "llkv-tpc-h"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
arrow.workspace = true
clap.workspace = true
llkv.workspace = true
llkv-sql.workspace = true
regex.workspace = true
sqlparser = { workspace = true, features = ["visitor"] }
thiserror.workspace = true
tracing.workspace = true
tpchgen = "2.0.1"
