[package]
name = "llkv-tpch"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
arrow.workspace = true
clap.workspace = true
llkv.workspace = true
llkv-table.workspace = true
llkv-sql.workspace = true
llkv-plan.workspace = true
llkv-expr.workspace = true
regex.workspace = true
rust_decimal.workspace = true
sqlparser = { workspace = true, features = ["visitor"] }
thiserror.workspace = true
tpchgen.workspace = true
time.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
llkv-compute.workspace = true

[lints]
workspace = true
