[package]
name = "llkv-tpch"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
arrow.workspace = true
clap.workspace = true
llkv.workspace = true
llkv-compute.workspace = true
llkv-expr.workspace = true
llkv-plan.workspace = true
llkv-sql.workspace = true
llkv-table.workspace = true
llkv-types.workspace = true
regex.workspace = true
rust_decimal.workspace = true
sqlparser = { workspace = true, features = ["visitor"] }
thiserror.workspace = true
time.workspace = true
tpchgen.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
llkv-test-utils = { workspace = true, features = ["auto-init"], optional = false }

[lints]
workspace = true
