[package]
name = "llkv-transaction"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
arrow = { workspace = true, default-features = false }
llkv-column-map.workspace = true
llkv-executor.workspace = true
llkv-expr.workspace = true
llkv-plan.workspace = true
llkv-result.workspace = true
llkv-storage.workspace = true
llkv-table.workspace = true
simd-r-drive-entry-handle.workspace = true
rustc-hash.workspace = true
tracing.workspace = true

[dev-dependencies]
llkv-storage = { workspace = true, features = ["simd-r-drive-support"] }
llkv-test-utils = { workspace = true, features = ["auto-init"], optional = false }
tempfile.workspace = true
