[package]
name = "llkv-transaction"
description = "Transaction management and MVCC for the LLKV toolkit."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
keywords = ["database", "transaction", "mvcc", "concurrency", "isolation"]
categories = ["database-implementations", "concurrency"]
readme = "README.md"

[dependencies]
arrow = { workspace = true, default-features = false }
croaring.workspace = true
llkv-column-map.workspace = true
llkv-executor.workspace = true
llkv-expr.workspace = true
llkv-plan.workspace = true
llkv-result.workspace = true
llkv-storage.workspace = true
llkv-table.workspace = true
llkv-types.workspace = true
rustc-hash.workspace = true
simd-r-drive-entry-handle.workspace = true
tracing.workspace = true

[dev-dependencies]
llkv-storage = { workspace = true, features = ["simd-r-drive-support"] }
llkv-test-utils = { workspace = true, features = ["auto-init"], optional = false }
tempfile.workspace = true

[lints]
workspace = true

[package.metadata.cargo-udeps.ignore]
# List dependency names to ignore for this package
normal = []
development = ["llkv-test-utils"]
build = []
