[package]
name = "llkv-types"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
bitcode.workspace = true
icu_casemap = "2.0.0"
icu_normalizer = "2.0.0"

[dev-dependencies]
criterion.workspace = true
llkv-column-map.workspace = true
rand.workspace = true

[[bench]]
name = "datatype_enum_bench"
harness = false
