[package]
name = "llkv"
description = "An Apache Arrow columnar storage layer with SQL for key-value storage systems."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
keywords = ["database", "sql", "arrow", "columnar", "mvcc"]
categories = ["database-implementations"]
readme = "README.md"

[features]
simd-r-drive-support = ["llkv-storage/simd-r-drive-support"]

[dependencies]
llkv-sql = { workspace = true }
llkv-storage = { workspace = true }
arrow = { workspace = true }
# llkv-slt-tester = { workspace = true }
llkv-result = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
llkv-storage = { workspace = true, features = ["simd-r-drive-support"] }

[lints]
workspace = true
