[package]
name = "llkv"
description = "An Apache Arrow columnar storage layer with SQL for key-value storage systems."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
keywords = ["database", "sql", "arrow", "columnar", "mvcc"]
categories = ["database-implementations"]
readme = "README.md"

[package.metadata.cargo-udeps.ignore]
# List dependency names to ignore for this package
normal = []
development = ["llkv-test-utils"]
build = []

[features]
simd-r-drive-support = ["llkv-storage/simd-r-drive-support"]

[dependencies]
arrow = { workspace = true }
llkv-result = { workspace = true }
llkv-runtime = { workspace = true }
llkv-slt-tester = { workspace = true }
llkv-sql = { workspace = true }
llkv-storage = { workspace = true }

[dev-dependencies]
llkv-storage = { workspace = true, features = ["simd-r-drive-support"] }

[lints]
workspace = true
